# VulkanWindow

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VulkanWindow.sln  windows.json
.github/workflows/: Release.yml  build.yml  cmake.yml
VulkanWindow/: VulkanWindow.vcxproj  VulkanWindow.vcxproj.filters  main.cpp  window.h
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-debug/examples/textured_quad/: Makefile  cmake_install.cmake
build-debug/examples/textured_quad/VulkanWindowTexturedQuad_shaders/: quad.frag.spv.inc  quad.vert.spv.inc
build-debug/examples/triangle/: Makefile  cmake_install.cmake
build-debug/examples/triangle/VulkanWindowTriangle_shaders/: triangle.vert.spv.inc
cmake/: VulkanWindowConfig.cmake.in  VulkanWindowShaders.cmake
examples/: .clang-tidy
examples/textured_quad/: CMakeLists.txt  main.cpp  quad.frag
examples/triangle/: CMakeLists.txt  main.cpp  triangle.vert
scripts/: glfw.cmake  imgui.cmake
source/: Application.cpp  Application.h  ImGuiManager.cpp  ImGuiManager.h  RendererTypes.h  Swapchain.cpp  Swapchain.h  UserInterface.cpp  UserInterface.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanResources.cpp  VulkanResources.h  VulkanSelectors.cpp  VulkanSelectors.h  VulkanUtils.cpp  VulkanUtils.h  Window.cpp  Window.h  application.cpp  application.hpp  main.cpp  vma_impl.cpp
tests/: CMakeLists.txt  test_main.cpp  test_selectors.cpp  test_utils.cpp
